# SME0823-2025-2

./: README.md  mypy.ini  pyproject.toml
src/mlg/: __init__.py  settings.py
src/mlg/notebooks/: 01 Modelos lineares.ipynb  02 Balanço viés variância.ipynb
