[project]
name = "mlg"
version = "0.1.0"
description = "Códigos da disciplina SME0823 - Modelos de Regressão e Aprendizado Supervisionado II (2025/2)"
readme = "README.md"
authors = [
    { name = "Aline", email = "line.asramos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandera>=0.26.0",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]

[project.scripts]
mlg = "mlg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.17.1",
    "nbformat>=5.10.4",
    "ruff>=0.12.9",
]
